--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     margin-top: 20px;
 }
 
-.button,
+.add-button,
 #submit-button {
     font-family: "Architects Daughter", cursive;
     background-color: #24a19c;
@@ -43,14 +43,13 @@ body {
     font-size: 1.2rem;
 }
 
-.button:hover,
+.add-button:hover,
 #submit-button:hover {
     cursor: pointer;
     opacity: 0.93;
 }
 
 .modal {
-    /*   display: none; */
     position: fixed;
     z-index: 1;
     left: 0;
@@ -92,12 +91,14 @@ body {
     align-items: center;
 }
 
-#read:hover {
+#read-no:hover,
+#read-yes:hover {
     cursor: pointer;
 }
 
 .form {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -115,4 +116,8 @@ body {
     justify-content: center;
     margin-bottom: 5px;
     height: 40px;
+}
+
+.hidden {
+    display: none;
 }
