--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,8 @@ body {
     color: #325288;
 }
 
-.close {
+.close,
+.remove {
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -78,7 +79,9 @@ body {
 }
 
 .close:hover,
-.close:focus {
+.close:focus,
+.remove:hover,
+.remove:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -120,4 +123,23 @@ body {
 
 .hidden {
     display: none;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: solid;
+    border-radius: 5px;
+    width: 250px;
+    margin: 30px;
+}
+
+.read {
+    background-color: #13a36c;
+}
+
+.unread {
+    background-color: #e24343;
 }
