--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,7 @@ body {
     color: #325288;
 }
 
-.close,
-.remove {
+.close {
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -85,6 +84,21 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.remove-container {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 30px;
+}
+
+.remove {
+    margin: 0px 5px 0px 0px;
+    color: rgb(56, 56, 56);
+    font-size: 28px;
+    font-weight: bold;
+    padding: 0px;
 }
 
 .submit-button {
@@ -138,8 +152,22 @@ body {
 
 .read {
     background-color: #13a36c;
+    margin-bottom: 10px;
 }
 
 .unread {
     background-color: #e24343;
+    margin-bottom: 10px;
+}
+
+.book-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div {
+    border: solid;
+    border-color: red;
 }
